# rules_pyright

./: BUILD  MODULE.bazel  pyrightconfig.json  type_checker.bzl
example/: BUILD  MODULE.bazel  defs.bzl  package.json  pyrightconfig.json  requirements.txt  requirements_lock.txt  type_checker.bzl
example/src/: BUILD  hello_world.py  lib.py
test/: BUILD  test.py
tools/: BUILD  defs.bzl  update_pyrightconfig.py
