module(
    name = "rules_pyright",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc9")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")
