bazel_dep(name = "rules_pyright", version = "0.0.0")

local_path_override(
    module_name = "rules_pyright",
    path = "..",
)

bazel_dep(name = "rules_python", version = "0.34.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(configure_coverage_tool = True, python_version = "3.11")
use_repo(python, "python_3_11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
